Changes since R3-0-1
 - changed internal implementation use ELLLISTs to store
   registered entries rather than registry. This was changed
   so that dbior can list existing registrations.

devBusMapped-R3-0-0:
	Import/sync from SSRL repository.
    This release adds the following features:
	 - use explicit 32-bit types instead of
 	   'int', 'unsigned' etc. This silences
 	   compiler warnings but could require
 	   applications to also change to using
 	   types from epicsTypes.h to silence
 	   warnings.
 	 - don't include <dbAccess.h> from <devBusMapped.h>
 	   it turns out that an EPICS IOC application cannot
 	   include both, dbAccess.h and cadef.h without 
 	   getting redefinition of symbol errors (tsss
 	   EPICS core architects!).
 	   devBusMapped.h now includes everything that
 	   is needed to compile this header itself but
 	   your application may need additional #includes
 	   since <dbAccess.h> is no longer included
 	   implicitly.
 	 - added c++ 'extern "C"' linkage declaration
 	   to devBusMapped.h
 	 - AO 'init_record' changed semantics:
 	   Let init_record return '2' (no convert) instead of
 	   (0). This lets the record use the initial VAL or DOL
 	   (if set), respectively if PINI=YES. (The current
 	   and previous behavior reads 'RVAL' from the hardware
 	   and converts to VAL if PINI=NO.)

	   Previously, if PINI=YES the user would have to
 	   specify an initial RVAL (while VAL/DOL being
 	   ignored).

	NOTE: due to changes to the devBusMapped.h header
 	   the major release number was incremented.
 
