@@ -9,5 +9,7 @@ device(longin,   VME_IO,  devLiBus,   "BusAddress")
 device(longout,  VME_IO,  devLoBus,   "BusAddress")
 device(ai,       VME_IO,  devAiBus,   "BusAddress")
 device(ao,       VME_IO,  devAoBus,   "BusAddress")
+device(stringin, VME_IO,  devSiBus,   "BusAddress")
+device(stringout,VME_IO,  devSoBus,   "BusAddress")
 driver(devBusMapped)
 registrar(devBusMappedInit)
